testes unitários em ALternativaServiceImplTest passando